# whiplash

./: .gitignore  .gitlab-ci.yml  .gitmodules  108ising.json  Dockerfile  LICENSE.MIT  README.md  README_cloud.md  amazon.yml  apps.json  autogen.sh  build_test_deploy.sh  client.cpp  client.py  client_test.py  cloud.yml  cloud_build.yml  cloud_docker.yml  cloud_www.yml  commit_executable.sh  commit_model.py  compile_cwave.sh  config.json  createClient.js  createUser.js  deadlines.txt  demo_unmanaged.all.py  deploy.sh  deploy.yml  deployment_configuration.txt  develop.yml  docker.sh  environment.sh  executable.json  ideas.txt  mkdocs.yml  model.json  package.json  property.json  run.sh  (+12 more)
amazon/: api.cfg  benchmarks.pem  db.cfg  launch_api.py  launch_db.py  launch_rte.py
api/: Dockerfile  config.json  docker-compose.yml  mkdocs.yml  nginx.conf  package.json
api/docs/: api_data.js  api_data.json  api_project.js  api_project.json  basic_usage.md  deployment.md  index.md  make.sh  mkdocs.yml  quick_start.md
api/libs/: app.js  collections.js  config.js  log.js  timer.js
archive/: dlopen.cpp  main.cpp
archive/cpp_main_macro_solution/: mini_sim.cpp
archive/jupyter/: docker-compose.yml
archive/mappers/: dimacs2Ising.cpp
benchmarks/: README.md  bench.py  benchmark.py  executable.json  model.json  run.py  whipbench.py
config/mongo/: mongod.conf
core/: autogen.sh
core/archive/: scheduler_mpi_simple.cpp
core/docker/: docker_build_build.sh  test.sh
core/examples/: commit_model.py
core/src/: Makefile  wdb.hpp
deployment/: passwords.sh
deployment/cloud/: build.yml  push_images.sh
deployment/dev/: docker-compose.yml
deployment/development/: docker-compose.yml
deployment/local/: docker-compose.yml
doc/: Makefile  README  problem_standards.md
doc/source/: conf.py  index.rst
docker/: Dockerfile  Dockerfile.api  Dockerfile.apps  Dockerfile.build  Dockerfile.deploy  Dockerfile.odb  Dockerfile.rte  Dockerfile.scheduler  Dockerfile.www  README.md  bootstrap.sh  build.sh  build_and_test.sh  build_apps.sh  build_deploy.sh  build_test_push.sh  build_test_push_deploy.sh  cleanup.sh  deploy.sh  development_startup.sh  docker-entrypoint.sh  install.sh  push.sh  run.sh  test.sh  whiplash.ethz.ch.boot.sh
docker/dependencies/: mongo-c-driver  mongo-cxx-driver
docker/deployment/: README.md  bootstrap.sh
docker/deployments/: README.md
docker_registry/: create_user.sh  docker-compose.yml
docker_registry/auth/: htpasswd
docs/: algorithm_standards.md  deployment.md  doxyproject  examples.md  index.md  make_api_doc.sh  mkdocs.yml  overview.md  problem_classes.md  problem_standards.md  schema.md  snapshot.md  standards.md  usage.md
examples/: demo_unmanaged.all.py
examples/local/: README.md  commit_executable.py  commit_models.py  query.py  status.py  submit.py
examples/manual/: README.md  commit_executable.py  commit_result.py  input.json  output.json
examples/parameter_search/: next_point.py  run.py  startup.sh
h693/: simfw.hpp
h693/apps/: hamil  (+1 more)
jupyter/: Dockerfile  jupyterhub_config.py
libs/: app.js
odb/: Dockerfile  docker-compose.yml  docker-startup.js  docker-users.js  startup.js
python/: 108ising.json  client_test.py  commit_apps.py  commit_model.py  demo.py  init_monch.sh  model.json  run.sh  scheduler_local.py  scheduler_slurm.py  scheduler_users.py  sleeper.cpp  sleeper.py  sleeper2.cpp  sleeper2.py  update_monch.py  wdb_info.json  wdb_info_monch.json  whiplash.py
rte/: Dockerfile  batcher.py  create_token.py  docker-compose.yml  manager.py  scheduler_cloud.py  scheduler_local.py  scheduler_slurm.py  whiplash.py
scheduler/: Dockerfile  README.md  batch.py  create_token.py  docker-compose.yml  ecosystem.json  local.py  local_docker.py  package.json  scheduler_local.py  scheduler_local_docker.py  scheduler_slurm.py  scheduler_users.py  slurm.py  users.py
scripts/: backup.sh  backup_remote.sh  check_output.sh  check_whiplash.sh  cloud_deploy.sh  cloud_deploy_docker.sh  cloud_deploy_ubuntu.sh  demo.sh  deploy.sh  deploy_big.sh  deploy_big_remote.sh  init_monch.sh  init_users.sh  mongo_setup.sh  mongo_startup.sh  monitor_whiplash.sh  node_startup.sh  prepare_rte.sh  push_images.sh  remote_command.sh  restart_all_monch.sh  restart_all_solo_monch.sh  rte_startup.sh  run_demo.sh  scheduler_startup.sh  sleeper.sh  start_and_sleep.sh  submit-day.sh  submit-week.sh  submit.sh  upload_images.sh  user_init.sh  whiplash_week.err
src/: Makefile  anc_demo.sh  arg_parser.hpp  demo.sh  demo2.sh  options.hpp  scheduler_mpi_simple.cpp  simfw.hpp  spin_glass_solver_test.sh  test.sh  utils.hpp  wdb.hpp
src/apps/unitary_evolution_wrap/: .gitignore  CMakeLists.txt  ue_solver.cpp
tests/: docker-compose.yml  post-tests.py  pre-tests.py  push.sh  reset.py  runner.Dockerfile  runner.cpp  runner.py  sleeper.Dockerfile  sleeper.py  sleeper.yml  test.json  test.json.bak  tests.py
worker/: Pipfile  whiplash.py  worker.py
www/: Dockerfile  app.js  config.cloud.json  config.json  docker-compose.yml  index.html  index.php  package.json
(+470 files in other folders)
